--- a/pages/settings.html
+++ b/pages/settings.html
@@ -23,38 +23,29 @@
 
 </head>
 
-<body style="height: 100%;">
+<body>
     <nav class="navbar navbar-dark bg-dark shadow-sm bg-dark">
-        <div class="container">
-            <!-- <button class="navbar-toggler" type="button">
-                <span class="navbar-toggler-icon"></span>
-            </button> -->
-            <!-- <a class="navbar-brand">Navbar</a> -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="avatar row">
-                <div class="col pr-1 pl-0">
-                    <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
-                </div>
-                <div class="col-6 user-info name pl-0">
-                    <h6 class="user-name">User Name</h6>
-                    <h6 class="user-position">User Role</h6>
-                </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon  text-light"></span>
+        </button>
+        <div class="avatar row">
+            <div class="col">
+                <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
             </div>
-            <form class="form-inline search">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-            </form>
-            <div class="text-center logo-nav">
-                <img src="/images/tu-logo.png" class="img-fluid logo" style="height:50px ;" />
+            <div class="col-6 user-info name pl-0 mt-2">
+                <h6 class="user-name text-light">User Name</h6>
+                <h6 class="user-position text-light">User Role</h6>
             </div>
-
         </div>
-
-
-    </nav>
+        <form class="form-inline search">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+        </form>
+        <div class="text-center logo-nav mr-2">
+            <img src="/images/tu-logo.png" class="img-fluid logo" style="height:50px ;" />
+        </div>
+</nav>
     <div class="profil-box mb-4">
         <div class="shadow bg-dark rounded">
             <ul class="list-group list-group-flush">
@@ -67,7 +58,7 @@
     </div>
     <div class="page bg-light">
         <div class="sidebar bg-dark">
-            <ul class="shadow-sm mx-auto">
+            <ul class="shadow-sm mx-auto mt-5">
                 <div class="text-center logo-sidebar mb-4 mt-2">
                     <img src="/images/tu-logo.png" class="img-fluid logo" style="height:50px ;" />
                 </div>
@@ -95,7 +86,7 @@
                     <div class="rounded-pill sidebar-item pt-1 pb-1 pl-4">
                         <a class="forms sidebar-link text-light mb-1">
                             <i class='bx bxs-layout text-light pl-2 mr-2'></i><span>Forms</span>
-                            <span class="dropdown-toggle"></span>
+                            <span class="dropdown-toggle pl-4"></span>
                         </a>
                     </div>
 
@@ -136,8 +127,8 @@
                 </li>
             </ul>
         </div>
-        <div class="content px-0">
-            <div class="container px-5 mb-4">
+        <div class="content w-100">
+            <div class="container mb-5">
                 <div class="row mt-5">
                     <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
                         <div class="p-3 shadow bg-white rounded mx-auto">
@@ -155,7 +146,7 @@
                                     <br />
                                     <select class="form-control icon selectpicker" name="user" data-live-search="true"
                                         id="position" required>
-                                        <option value="Position">Select You'r Position</option>
+                                        <option value="Position">Select a Position</option>
                                         <option value="Position 1" data-tokens="Position 1">Position 1</option>
                                         <option value="Position 2" data-tokens="Position 2">Position 2</option>
                                         <option value="Position 3" data-tokens="Position 3">Position 3</option>
@@ -210,8 +201,8 @@
                     </div>
                 </div>
             </div>
-            <footer class="page-footer bg-white text-center footer-position">
-                <div class="footer-copyright text-center py-3">
+            <footer class="bg-white text-center footer-position">
+                <div class="text-center py-3">
                     Taibah University - Deanship of Information Technology © 2022
                 </div>
             </footer>
