--- a/pages/formsInputs.html
+++ b/pages/formsInputs.html
@@ -25,37 +25,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-<body class="formsInputs-body">
+<body>
     <nav class="navbar navbar-dark bg-dark shadow-sm bg-dark">
-        <div class="container">
-            <!-- <button class="navbar-toggler" type="button">
-                <span class="navbar-toggler-icon"></span>
-            </button> -->
-            <!-- <a class="navbar-brand">Navbar</a> -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="avatar row">
-                <div class="col pr-1 pl-0">
-                    <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
-                </div>
-                <div class="col-6 user-info name pl-0">
-                    <h6 class="user-name">User Name</h6>
-                    <h6 class="user-position">User Role</h6>
-                </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon  text-light"></span>
+        </button>
+        <div class="avatar row">
+            <div class="col">
+                <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
             </div>
-            <form class="form-inline search">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-            </form>
-            <div class="text-center logo-nav">
-                <img src="/images/tu-logo.png" class="img-fluid logo" style="height:50px ;" />
+            <div class="col-6 user-info name pl-0 mt-2">
+                <h6 class="user-name text-light">User Name</h6>
+                <h6 class="user-position text-light">User Role</h6>
             </div>
-
         </div>
-
-
+        <form class="form-inline search">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+        </form>
+        <div class="text-center logo-nav mr-2">
+            <img src="/images/tu-logo.png" class="img-fluid logo" style="height:50px ;" />
+        </div>
     </nav>
     <div class="profil-box mb-4">
         <div class="shadow bg-dark rounded">
@@ -69,7 +60,7 @@
     </div>
     <div class="page bg-light">
         <div class="sidebar bg-dark">
-            <ul class="shadow-sm mx-auto">
+            <ul class="shadow-sm mx-auto mt-5">
                 <div class="text-center logo-sidebar mb-4 mt-2">
                     <img src="/images/tu-logo.png" class="img-fluid logo" style="height:50px ;" />
                 </div>
@@ -97,7 +88,7 @@
                     <div class="rounded-pill sidebar-item pt-1 pb-1 pl-4">
                         <a class="forms sidebar-link text-light mb-1">
                             <i class='bx bxs-layout text-light pl-2 mr-2'></i><span>Forms</span>
-                            <span class="dropdown-toggle"></span>
+                            <span class="dropdown-toggle pl-4"></span>
                         </a>
                     </div>
 
@@ -138,10 +129,10 @@
                 </li>
             </ul>
         </div>
-        <div class="content px-0">
-            <div class="container mb-4 px-5">
+        <div class="content w-100">
+            <div class="container mb-5">
                 <div class="row mt-5">
-                    <div class="col-lg-4 col-md-4 col-sm-6">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="shadow bg-white rounded p-3 mb-5" style="min-height: 130px;">
                             <h5>Inputs</h5>
                             <form>
@@ -151,7 +142,7 @@
                             </form>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="shadow bg-white rounded p-3 mb-5" style="min-height: 130px;">
                             <h5>Inputs</h5>
                             <form>
@@ -178,7 +169,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row date-time mt-5">
+                <div class="row mt-5">
                     <div class="col-lg-4 col-md-4 col-sm-6">
                         <div class="shadow bg-white rounded p-3 mb-5">
                             <h5>Date</h5>
@@ -219,8 +210,8 @@
                     </div>
                 </div>
                 <div class="row mt-5">
-                    <div class="col-lg-4 col-md-4 col-sm-6" id="file-uploade-1">
-                        <div class="p-3 mb-5  shadow bg-white rounded">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                        <div class="shadow bg-white rounded p-3 mb-5" style="height: 270px;">
                             <h5>Upload File</h5>
                             <form class="bg-light p-3">
                                 <div class="form-group">
@@ -231,18 +222,17 @@
                             </form>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6" id="file-uploade-2">
-                        <div class="p-3 mb-5  shadow bg-white rounded">
+                    <div class="col-lg-4 col-md-4 col-sm-12" id="file-uploade-2">
+                        <div class="shadow bg-white rounded p-3 mb-5" style="height: 270px;">
                             <h5>drop down</h5>
                             <div class="form-group custom-upload-file">
                                 <input type="file" class="dropify" />
                             </div>
                         </div>
                     </div>
-                    <!-- upload multible files -->
                     <div class="col-lg-4 col-md-4 col-sm-12 multible-file-uploade">
                         <div id="file-uploade-3">
-                            <div class="col p-3 mb-5 shadow bg-white rounded">
+                            <div class="col p-3 mb-5 shadow bg-white rounded" style="height: 270px;">
                                 <div class="d-flex justify-content-between">
                                     <h5>Upload File</h5><span class="btn add-file-upload">+</span>
                                 </div>
@@ -258,7 +248,7 @@
                     </div>
                 </div>
                 <div class="row mt-5">
-                    <div class="col-lg-4 col-md-4 col-sm-6">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="form-group shadow bg-white rounded text-center p-3">
                             <label for="exampleFormControlSelect1">select</label>
                             <select class="form-control" id="exampleFormControlSelect1">
@@ -270,7 +260,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="form-group shadow bg-white rounded text-center p-3">
                             <label for="exampleFormControlSelect2">multiple select</label>
                             <select class="selectpicker" multiple title="Choose one of the following...">
@@ -298,50 +288,60 @@
                     </div>
                 </div>
                 <div class="row mt-5">
-                    <div class="col-lg-4 col-md-4 col-sm-6">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
                         <form class="shadow bg-white rounded text-center p-3 mb-3" style="min-height: 70px;">
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" name="checkbox" type="checkbox" id="inlineCheckbox1" value="option1">
+                                <input class="form-check-input" name="checkbox" type="checkbox" id="inlineCheckbox1"
+                                    value="option1">
                                 <label class="form-check-label" for="inlineCheckbox1">1</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" name="checkbox" type="checkbox" id="inlineCheckbox2" value="option2">
+                                <input class="form-check-input" name="checkbox" type="checkbox" id="inlineCheckbox2"
+                                    value="option2">
                                 <label class="form-check-label" for="inlineCheckbox2">2</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" name="checkbox" type="checkbox" id="inlineCheckbox3" value="option3">
+                                <input class="form-check-input" name="checkbox" type="checkbox" id="inlineCheckbox3"
+                                    value="option3">
                                 <label class="form-check-label" for="inlineCheckbox3">3</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" name="checkbox" type="checkbox" id="inlineCheckbox4" value="option4">
+                                <input class="form-check-input" name="checkbox" type="checkbox" id="inlineCheckbox4"
+                                    value="option4">
                                 <label class="form-check-label" for="inlineCheckbox4">4</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" name="checkbox" type="checkbox" id="inlineCheckbox5" value="option5">
+                                <input class="form-check-input" name="checkbox" type="checkbox" id="inlineCheckbox5"
+                                    value="option5">
                                 <label class="form-check-label" for="inlineCheckbox5">5</label>
                             </div>
                         </form>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
                         <form class="shadow bg-white rounded text-center p-3 ml-1 mb-3" style="min-height: 70px;">
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" name="radio" type="radio" id="inlineradio1" value="option1">
+                                <input class="form-check-input" name="radio" type="radio" id="inlineradio1"
+                                    value="option1">
                                 <label class="form-check-label" for="inlineradio1">1</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" name="radio" type="radio" id="inlineradio2" value="option2">
+                                <input class="form-check-input" name="radio" type="radio" id="inlineradio2"
+                                    value="option2">
                                 <label class="form-check-label" for="inlineradio2">2</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" name="radio" type="radio" id="inlineradio3" value="option3">
+                                <input class="form-check-input" name="radio" type="radio" id="inlineradio3"
+                                    value="option3">
                                 <label class="form-check-label" for="inlineradio3">3</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" name="radio" type="radio" id="inlineradio4" value="option4">
+                                <input class="form-check-input" name="radio" type="radio" id="inlineradio4"
+                                    value="option4">
                                 <label class="form-check-label" for="inlineradio4">4</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" name="radio" type="radio" id="inlineradio5" value="option5">
+                                <input class="form-check-input" name="radio" type="radio" id="inlineradio5"
+                                    value="option5">
                                 <label class="form-check-label" for="inlineradio5">5</label>
                             </div>
                         </form>
@@ -356,15 +356,23 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="buttons mt-5 shadow bg-white rounded p-4">
-                    <button type="button" class="btn btn-primary">Submit</button>
-                    <button type="button" class="btn btn-outline-primary">Submit</button>
-                    <button type="button" class="btn btn-primary rounded-pill">Submit</button>
-                    <button type="button" class="btn btn-outline-primary"> <i
-                            class='bx bx-file-blank mr-2'></i>Submit</button>
+                <div class="mt-5 shadow bg-white rounded p-4">
+                    <div class="row text-center">
+                        <div class="col-lg-3 col-md-6 col-sm-12 mb-1">
+                            <button type="button" class="btn btn-primary">Submit</button>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12 mb-1">
+                            <button type="button" class="btn btn-outline-primary">Submit</button>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12 mb-1">
+                            <button type="button" class="btn btn-primary rounded-pill">Submit</button>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12 mb-1">
+                            <button type="button" class="btn btn-outline-primary"> <i
+                                    class='bx bx-file-blank mr-2'></i>Submit</button>
+                        </div>
+                    </div>
                 </div>
-
             </div>
             <footer class="bg-white text-center footer-position">
                 <div class="text-center py-3">
@@ -372,41 +380,40 @@
                 </div>
             </footer>
         </div>
+    </div>
 
-        <!-- Optional JavaScript; choose one of the two! -->
+    <!-- Optional JavaScript; choose one of the two! -->
 
-        <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-            crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Dropify/0.2.0/js/dropify.min.js"
-            integrity="sha512-5lwTm2lltwGLuFpI0jqcCxGS4Y7cJn3ylGb0BTJty5xGt2lqT9/efUhQV1dyOXpQ/PbvmE6EUP+zRIPGiccFng=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script>$('.dropify').dropify({
-                messages: {
-                    'default': 'Drag and drop a file here or click',
-                    'replace': 'Drag and drop or click to replace',
-                    'remove': 'Remove',
-                    'error': 'Ooops, something wrong happended.'
-                }
-            });</script>
-        <script type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.0/moment.min.js"></script>
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/js/tempusdominus-bootstrap-4.min.js"
-            integrity="sha512-k6/Bkb8Fxf/c1Tkyl39yJwcOZ1P4cRrJu77p83zJjN2Z55prbFHxPs9vN7q3l3+tSMGPDdoH51AEU8Vgo1cgAA=="
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script>
-        <script src="/js/jquery-3.6.1.min.js"></script>
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Dropify/0.2.0/js/dropify.min.js"
+        integrity="sha512-5lwTm2lltwGLuFpI0jqcCxGS4Y7cJn3ylGb0BTJty5xGt2lqT9/efUhQV1dyOXpQ/PbvmE6EUP+zRIPGiccFng=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>$('.dropify').dropify({
+            messages: {
+                'default': 'Drag and drop a file here or click',
+                'replace': 'Drag and drop or click to replace',
+                'remove': 'Remove',
+                'error': 'Ooops, something wrong happended.'
+            }
+        });</script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.0/moment.min.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/js/tempusdominus-bootstrap-4.min.js"
+        integrity="sha512-k6/Bkb8Fxf/c1Tkyl39yJwcOZ1P4cRrJu77p83zJjN2Z55prbFHxPs9vN7q3l3+tSMGPDdoH51AEU8Vgo1cgAA=="
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script>
+    <script src="/js/jquery-3.6.1.min.js"></script>
 
-        <script src="/js/index.js"></script>
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Dropify/0.2.0/js/dropify.min.js"
+    <script src="/js/index.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Dropify/0.2.0/js/dropify.min.js"
         integrity="sha512-5lwTm2lltwGLuFpI0jqcCxGS4Y7cJn3ylGb0BTJty5xGt2lqT9/efUhQV1dyOXpQ/PbvmE6EUP+zRIPGiccFng=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-
 </body>
 
 </html>
