--- a/pages/login.html
+++ b/pages/login.html
@@ -14,38 +14,29 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
-<body style="height: 100%;">
+<body>
     <nav class="navbar navbar-dark bg-dark shadow-sm bg-dark">
-        <div class="container">
-            <!-- <button class="navbar-toggler" type="button">
-                <span class="navbar-toggler-icon"></span>
-            </button> -->
-            <!-- <a class="navbar-brand">Navbar</a> -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="avatar row">
-                <div class="col pr-1 pl-0">
-                    <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
-                </div>
-                <div class="col-6 user-info name pl-0">
-                    <h6 class="user-name">User Name</h6>
-                    <h6 class="user-position">User Role</h6>
-                </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon  text-light"></span>
+        </button>
+        <div class="avatar row">
+            <div class="col">
+                <img src="/images/user-solid-60.png" class="avatar-img rounded-circle img-fluid" />
             </div>
-            <form class="form-inline search">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-            </form>
-            <div class="text-center logo-nav">
-                <img src="/images/tu-logo.png" class="img-fluid logo" style="height:50px ;" />
+            <div class="col-6 user-info name pl-0 mt-2">
+                <h6 class="user-name text-light">User Name</h6>
+                <h6 class="user-position text-light">User Role</h6>
             </div>
-
         </div>
-
-
-    </nav>
+        <form class="form-inline search">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+        </form>
+        <div class="text-center logo-nav mr-2">
+            <img src="/images/tu-logo.png" class="img-fluid logo" style="height:50px ;" />
+        </div>
+</nav>
     <div class="profil-box mb-4">
         <div class="shadow bg-dark rounded">
             <ul class="list-group list-group-flush">
@@ -58,7 +49,7 @@
     </div>
     <div class="page bg-light">
         <div class="sidebar bg-dark">
-            <ul class="shadow-sm mx-auto">
+            <ul class="shadow-sm mx-auto mt-5">
                 <div class="text-center logo-sidebar mb-4 mt-2">
                     <img src="/images/tu-logo.png" class="img-fluid logo" style="height:50px ;" />
                 </div>
@@ -86,7 +77,7 @@
                     <div class="rounded-pill sidebar-item pt-1 pb-1 pl-4">
                         <a class="forms sidebar-link text-light mb-1">
                             <i class='bx bxs-layout text-light pl-2 mr-2'></i><span>Forms</span>
-                            <span class="dropdown-toggle"></span>
+                            <span class="dropdown-toggle pl-4"></span>
                         </a>
                     </div>
 
@@ -127,10 +118,10 @@
                 </li>
             </ul>
         </div>
-        <div class="content px-0">
-            <div class="container p-0">
-                <div class="login-form mt-5 mb-5 shadow bg-white rounded p-4 mx-auto">
-                    <form>
+        <div class="content w-100">
+            <div class="container mb-5">
+                <div class="login-form mt-5 shadow bg-white rounded p-4 mx-auto" style="max-width: 300px;">
+                    <form >
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
                             <input type="email" class="form-control" id="exampleInputEmail1"
@@ -153,7 +144,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="registration-form mt-5 mb-5 shadow bg-white rounded p-4 mx-auto">
+                <div class="registration-form mt-5 mb-5 shadow bg-white rounded p-4 mx-auto" style="max-width: 300px;">
                     <form>
                         <div class="form-group">
                             <label for="exampleInputName">Name</label>
