--- a/pages/errorPage.html
+++ b/pages/errorPage.html
@@ -119,7 +119,7 @@
             </ul>
         </div>
         <div class="content w-100">
-            <div class="container mb-5">
+            <div class="container-md mb-5">
                 <div class=" w-75 mt-5 text-center mx-auto">
                     <h1 class="font-weight-bolder">404</h1>
                     <h1 class="font-weight-light mt-4 mb-4">Page Not Found</h1>
