--- a/pages/fonts.html
+++ b/pages/fonts.html
@@ -119,7 +119,7 @@
             </ul>
         </div>
         <div class="content w-100">
-            <div class="container mb-5">
+            <div class="container-md mb-5">
                 <!-- title-fonts -->
                 <div class="row mt-5">
                     <div class="col-lg-4 col-md-4 col-sm-12">
@@ -176,8 +176,8 @@
                 </div>
                 <!-- paragraph-fonts -->
                 <div class="row mt-5">
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div class="shadow bg-white rounded p-3 mb-5" style="min-height: 230px;">
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <div class="shadow bg-white rounded p-3 mb-5" style="min-height: 250px;">
                             <h5>Paragraph(16px):</h5>
                             <div class="bg-light p-2 mt-3 rounded">
                                 <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure natus culpa,
@@ -187,16 +187,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div class="shadow bg-white rounded p-3 mb-5" style="min-height: 230px;">
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <div class="shadow bg-white rounded p-3 mb-5" style="min-height: 250px;">
                             <h5>Paragraph(16px):</h5>
                             <div class="bg-light p-2 mt-3 rounded">
-                                <p class="font-weight-light font-italic">Lorem ipsum, dolor sit amet consectetur
-                                    adipisicing
-                                    elit. Aliquam ipsam autem praesentium amet doloribus unde quo debitis enim
-                                    consectetur
-                                    itaque accusantium dolorum omnis cumque, assumenda recusandae quos illum architecto
-                                    tempora?</p>
+                                <p class="font-weight-light font-italic">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure natus culpa,
+                                    nam
+                                    asperiores recusandae et facilis doloribus aperiam iusto aliquam sequi, veniam minus
+                                    repellat totam provident, dolorum nihil eos. Ratione?</p>
                             </div>
                         </div>
                     </div>
@@ -204,7 +202,7 @@
                 <!-- date&time-fonts  -->
                 <div class="mt-5">
                     <div class="row">
-                        <div class="col-lg-3 col-md-3 col-sm-6">
+                        <div class="col-lg-3 col-md-6 col-sm-6">
                             <div class="shadow bg-white rounded p-3 mb-5">
                                 <h5>Date:</h5>
                                 <div class="bg-light p-2 mt-3 rounded text-center">
@@ -212,7 +210,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6">
+                        <div class="col-lg-3 col-md-6 col-sm-6">
                             <div class="shadow bg-white rounded p-3 mb-5">
                                 <h5>Date:</h5>
                                 <div class="bg-light p-2 mt-3 rounded text-center">
@@ -220,7 +218,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6">
+                        <div class="col-lg-3 col-md-6 col-sm-6">
                             <div class="shadow bg-white rounded p-3 mb-5">
                                 <h5>Time:</h5>
                                 <div class="bg-light p-2 mt-3 rounded text-center">
@@ -228,7 +226,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6">
+                        <div class="col-lg-3 col-md-6 col-sm-6">
                             <div class="shadow bg-white rounded p-3 mb-5">
                                 <h5>Date and Time:</h5>
                                 <div class="bg-light p-2 mt-3 rounded text-center">
