--- a/pages/formsInputs.html
+++ b/pages/formsInputs.html
@@ -130,10 +130,10 @@
             </ul>
         </div>
         <div class="content w-100">
-            <div class="container mb-5">
+            <div class="container-md mb-5">
                 <div class="row mt-5">
                     <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="shadow bg-white rounded p-3 mb-5" style="min-height: 130px;">
+                        <div class="shadow bg-white rounded p-3 mb-5" style="height: 130px;">
                             <h5>Inputs</h5>
                             <form>
                                 <div class="form-group">
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="shadow bg-white rounded p-3 mb-5" style="min-height: 130px;">
+                        <div class="shadow bg-white rounded p-3 mb-5" style="height: 130px;">
                             <h5>Inputs</h5>
                             <form>
                                 <div class="form-group">
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="shadow bg-white rounded p-3 mb-5" style="min-height: 130px;">
+                        <div class="shadow bg-white rounded p-3 mb-5" style="height: 130px;">
                             <h5>Inputs</h5>
                             <form>
                                 <div class="form-group">
@@ -249,7 +249,7 @@
                 </div>
                 <div class="row mt-5">
                     <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="form-group shadow bg-white rounded text-center p-3">
+                        <div class="form-group shadow bg-white rounded text-center p-3 mb-5">
                             <label for="exampleFormControlSelect1">select</label>
                             <select class="form-control" id="exampleFormControlSelect1">
                                 <option>1</option>
@@ -261,7 +261,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="form-group shadow bg-white rounded text-center p-3">
+                        <div class="form-group shadow bg-white rounded text-center p-3 mb-5">
                             <label for="exampleFormControlSelect2">multiple select</label>
                             <select class="selectpicker" multiple title="Choose one of the following...">
                                 <option>1</option>
@@ -274,7 +274,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="form-group shadow bg-white rounded text-center p-3">
+                        <div class="form-group shadow bg-white rounded text-center p-3 mb-5">
                             <label for="exampleFormControlSelect2">multiple select</label>
                             <select class="form-control selectpicker" name="part" data-live-search="true" required>
                                 <option value="Select Part">Select Part</option>
@@ -289,7 +289,7 @@
                 </div>
                 <div class="row mt-5">
                     <div class="col-lg-4 col-md-4 col-sm-12">
-                        <form class="shadow bg-white rounded text-center p-3 mb-3" style="min-height: 70px;">
+                        <form class="shadow bg-white rounded text-center p-3 mb-5" style="height:90px; margin: auto;">
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" name="checkbox" type="checkbox" id="inlineCheckbox1"
                                     value="option1">
@@ -318,7 +318,7 @@
                         </form>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
-                        <form class="shadow bg-white rounded text-center p-3 ml-1 mb-3" style="min-height: 70px;">
+                        <form class="shadow bg-white rounded text-center p-3 ml-1 mb-5" style="height:90px; margin: auto;">
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" name="radio" type="radio" id="inlineradio1"
                                     value="option1">
@@ -347,8 +347,8 @@
                         </form>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
-                        <div class="shadow bg-white rounded text-center p-3 ml-1" style="min-height: 70px;">
-                            <div class="toggleBox">
+                        <div class="shadow bg-white rounded text-center p-3 ml-1 mb-5" style="height:90px;">
+                            <div class="toggleBox" style=" margin: auto;">
                                 <input type="checkbox">
                                 <label for="" class="onbtn"></label>
                                 <label for="" class="ofbtn"></label>
@@ -358,18 +358,18 @@
                 </div>
                 <div class="mt-5 shadow bg-white rounded p-4">
                     <div class="row text-center">
-                        <div class="col-lg-3 col-md-6 col-sm-12 mb-1">
-                            <button type="button" class="btn btn-primary">Submit</button>
+                        <div class="col-lg-3 col-md-6 col-sm-12 mb-2">
+                            <button type="button" class="btn btn-primary rounded-pill w-50">Submit</button>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 mb-1">
-                            <button type="button" class="btn btn-outline-primary">Submit</button>
+                        <div class="col-lg-3 col-md-6 col-sm-12 mb-2">
+                            <button type="button" class="btn btn-primary w-50">Submit</button>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 mb-1">
-                            <button type="button" class="btn btn-primary rounded-pill">Submit</button>
+                        <div class="col-lg-3 col-md-6 col-sm-12 mb-2">
+                            <button type="button" class="btn btn-outline-primary w-50">Submit</button>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 mb-1">
-                            <button type="button" class="btn btn-outline-primary"> <i
-                                    class='bx bx-file-blank mr-2'></i>Submit</button>
+                        <div class="col-lg-3 col-md-6 col-sm-12 mb-2">
+                            <button type="button" class="btn btn-outline-primary w-50"><i
+                                    class='bx bx-file-blank'>Submit</i></button>
                         </div>
                     </div>
                 </div>
