--- a/pages/index.html
+++ b/pages/index.html
@@ -124,7 +124,7 @@
             </ul>
         </div>
         <div class="content w-100">
-            <div class="container mb-5">
+            <div class="container-md mb-5">
                 <div class="row mt-5">
                     <div class="col-lg-4 col-md-4 col-sm-6">
                         <div class="shadow bg-white rounded p-3 mb-5 text-center" style="min-height: 300px;">
