--- a/pages/layouts.html
+++ b/pages/layouts.html
@@ -119,7 +119,7 @@
             </ul>
         </div>
         <div class="content w-100">
-            <div class="container mb-5">
+            <div class="container-md mb-5">
                 <div class="row">
                     <div class="col-12 mt-4">
                         <div class="shadow bg-white rounded p-4">
