--- a/pages/login.html
+++ b/pages/login.html
@@ -119,7 +119,7 @@
             </ul>
         </div>
         <div class="content w-100">
-            <div class="container mb-5">
+            <div class="container-md mb-5">
                 <div class="login-form mt-5 shadow bg-white rounded p-4 mx-auto" style="max-width: 300px;">
                     <form >
                         <div class="form-group">
