--- a/pages/settings.html
+++ b/pages/settings.html
@@ -128,7 +128,7 @@
             </ul>
         </div>
         <div class="content w-100">
-            <div class="container mb-5">
+            <div class="container-md mb-5">
                 <div class="row mt-5">
                     <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
                         <div class="p-3 shadow bg-white rounded mx-auto">
