--- a/pages/tables.html
+++ b/pages/tables.html
@@ -119,7 +119,7 @@
             </ul>
         </div>
         <div class="content w-100">
-            <div class="container mb-5">
+            <div class="container-md mb-5">
                     <table class="table table-white shadow rounded mt-5">
                         <thead>
                             <tr>
